# ci-testing

./: .github_changelog_generator  .gitignore  CHANGELOG.md  CHANGELOG2.md  README.md  TODOs.md  ci_version.py  pyproject.toml  release_trigger.dot  release_trigger_roadmap.md  setup.py
.github/: milestone.yml  pull_request_template.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement_request.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.yml
.github/conf/: changelog_conf.json
.github/workflows/: bump_version.yml  changelog_milestone.yml  create_test_repo_from_template  create_test_repo_from_template.yml  generate_milestone.yml  get_labels.yml  issue_to_clickup_trigger.yml  milestone.yml  milestone_assign.yml  milestone_create.yml  milestone_next_minor.yml  milestone_next_patch.yml  miletone_release_FE.yml  miletone_release_trigger.yml  nightly.yml  nightly_merge.yml  prerelease.yml  project_action_testing.yml  release.yml  release_milestone.yml  release_milestone_test.yml  release_on_demand.yml  release_trigger.yml  reset_test_repo.yml  test_init_version.yml  update_bug_report.yml  version_up.yml  vesion_up.yml
igniterCItest/: version.py
openpype/: test.py  test2.py  version.py
openpypeCItest/: somefile.py  version.py
tools/: ci_tools.py  prepare_release.py  test.py
