[tool.poetry]
name = "OpenPype"
version = "0.3.11" # OpenPype version
description = "Multi-platform open-source pipeline built around the Avalon platform, expanding it with extra features and integrations."
authors = ["OpenPype Team <info@openpype.io>"]
license = "MIT License"
homepage = "https://openpype.io"
documentation = "https://openpype.io/docs/artist_getting_started"
repository = "https://github.com/pypeclub/openpype"
readme = "README.md"
keywords = ["Pipeline", "Avalon", "VFX", "animation", "automation", "tracking", "asset management"]

[tool.poetry.dependencies]
python = "3.7.*"
package = { version = "0.14.0-dev1", source = "openpype" }
anotherpackage = "^1.4.3"
pack2 = "1.17.0"
pack3 = "1.17.0"
versioning = "1.17.0"
pack2 = "1.17.0"
version = "1.0.0-something"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pypeclub/openpype/issues"
"Discussions" = "https://github.com/pypeclub/openpype/discussions"

[[tool.poetry.source]]
name = "openpype"
url = "https://distribute.openpype.io/wheels/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[openpype]

[openpype.thirdparty.ffmpeg.windows]
url = "https://distribute.openpype.io/thirdparty/ffmpeg-4.4-windows.zip"
hash = "dd51ba29d64ee238e7c4c3c7301b19754c3f0ee2e2a729c20a0e2789e72db925"

[openpype.thirdparty.ffmpeg.linux]
url = "https://distribute.openpype.io/thirdparty/ffmpeg-4.4-linux.tgz"
hash = "10b9beda57cfbb69b9ed0ce896c0c8d99227b26ca8b9f611040c4752e365cbe9"

[openpype.thirdparty.ffmpeg.darwin]
url = "https://distribute.openpype.io/thirdparty/ffmpeg-4.4-macos.tgz"
hash = "95f43568338c275f80dc0cab1e1836a2e2270f856f0e7b204440d881dd74fbdb"

[openpype.thirdparty.oiio.windows]
url = "https://distribute.openpype.io/thirdparty/oiio_tools-2.2.0-windows.zip"
hash = "fd2e00278e01e85dcee7b4a6969d1a16f13016ec16700fb0366dbb1b1f3c37ad"

[openpype.thirdparty.oiio.linux]
url = "https://distribute.openpype.io/thirdparty/oiio-2.2.0-linux.tgz"
hash = "sha256:..."

[openpype.thirdparty.oiio.darwin]
url = "https://distribute.openpype.io/thirdparty/oiio-2.2.0-darwin.tgz"
hash = "sha256:..."